fixing z-index of status bar

--- a/frontend_service/frontend/src/app/(auth)/profile/components/statistics/Match_History/Match_History.module.css
+++ b/frontend_service/frontend/src/app/(auth)/profile/components/statistics/Match_History/Match_History.module.css
@@ -83,22 +83,11 @@
     margin-right: 2vw;
 }
 
-/* .matchItem-result-win
-{
-    color: aliceblue;
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-left: 4vw;
-    margin-right: 2vw;
-} */
-
 .matchItem-result
 {
     color: aliceblue;
     font-size: 1.5rem;
     font-weight: 600;
-    /* margin-left: 4vw;
-    margin-right: 3vw; */
     width: 18vw;
     display: flex;
     justify-content: center;
@@ -110,12 +99,6 @@
     color: aliceblue;
     font-size: 1.5rem;
     font-weight: 600;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
-    /* margin-left: 2vw; */
-    /* margin-right: 2vw; */
 }
 
 .matchItem-xp-win
@@ -131,7 +114,6 @@
 .matchItem-xp-loss
 {
     color: #a51033;
-    /* color: #FC2B5D; */
     font-size: 1.5rem;
     font-weight: 600;
     font-style: normal;
@@ -149,7 +131,6 @@
     width: 10vw;
     height: inherit;
     margin-left: auto;
-    /* margin-right: 0; */
     border-top-left-radius: 0px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
